Add database models, routes, simple auth
